ci(docker): remove push docker images

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+---
 sudo: required
 
 notifications:
@@ -7,43 +8,16 @@ services:
   - docker
 
 env:
-  matrix :
+  matrix:
     - env:
-      NODE_PATCH_VERSION: '8.1.2'
-      NODE_MINOR_VERSION: '8.1'
-      NODE_MAJOR_VERSION: '8'
-      LATEST: 'latest'
+      VERSION: '8.1.2'
     - env:
-      NODE_PATCH_VERSION: '6.11.0'
-      NODE_MINOR_VERSION: '6.11'
-      NODE_MAJOR_VERSION: '6'
+      VERSION: '6.11.0'
     - env:
-      NODE_PATCH_VERSION: '4.8.3'
-      NODE_MINOR_VERSION: '4.8'
-      NODE_MAJOR_VERSION: '4'
+      VERSION: '4.8.3'
 
 install:
-  - docker build -t "lgatica/node-krb5-gm:$NODE_PATCH_VERSION" "$NODE_PATCH_VERSION"
-  - docker build -t "lgatica/node-krb5-gm:$NODE_PATCH_VERSION-onbuild" "$NODE_PATCH_VERSION/onbuild"
+  - docker build -t "lgatica/node-krb5-gm:$VERSION" "$VERSION"
 
 script:
-  - docker run --rm "lgatica/node-krb5-gm:$NODE_PATCH_VERSION" node --version
-
-after_success:
-  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker tag "lgatica/node-krb5-gm:$NODE_PATCH_VERSION" "lgatica/node-krb5-gm:$NODE_MINOR_VERSION"
-  - docker tag "lgatica/node-krb5-gm:$NODE_PATCH_VERSION" "lgatica/node-krb5-gm:$NODE_MAJOR_VERSION"
-  - docker tag "lgatica/node-krb5-gm:$NODE_PATCH_VERSION-onbuild" "lgatica/node-krb5-gm:$NODE_MINOR_VERSION-onbuild"
-  - docker tag "lgatica/node-krb5-gm:$NODE_PATCH_VERSION-onbuild" "lgatica/node-krb5-gm:$NODE_MAJOR_VERSION-onbuild"
-  - docker push "lgatica/node-krb5-gm:$NODE_PATCH_VERSION"
-  - docker push "lgatica/node-krb5-gm:$NODE_MINOR_VERSION"
-  - docker push "lgatica/node-krb5-gm:$NODE_MAJOR_VERSION"
-  - docker push "lgatica/node-krb5-gm:$NODE_PATCH_VERSION-onbuild"
-  - docker push "lgatica/node-krb5-gm:$NODE_MINOR_VERSION-onbuild"
-  - docker push "lgatica/node-krb5-gm:$NODE_MAJOR_VERSION-onbuild"
-  - if [ "$LATEST" == "latest" ]; then
-    docker tag "lgatica/node-krb5-gm:$NODE_PATCH_VERSION" "lgatica/node-krb5-gm:latest";
-    docker tag "lgatica/node-krb5-gm:$NODE_PATCH_VERSION-onbuild" "lgatica/node-krb5-gm:onbuild";
-    docker push "lgatica/node-krb5-gm:latest";
-    docker push "lgatica/node-krb5-gm:onbuild";
-    fi
+  - docker run --rm "lgatica/node-krb5-gm:$VERSION" node --version
