--- a/4.8.6/onbuild/Dockerfile
+++ b/4.8.6/onbuild/Dockerfile
@@ -1,11 +1,11 @@
-FROM lgatica/node-krb5-gm:4.8.3@sha256:6c8c495597e7c1696232eaff2a823eeb18cf2f35f64b1b9879800c4114be5533
+FROM lgatica/node-krb5-gm:4.8.6sha256:27c4db97bdf1456cd690d869b890ec7d0b8f8a43897cc8497cd13dc9c8c7318f
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 ONBUILD ARG NODE_ENV
 ONBUILD ENV NODE_ENV $NODE_ENV
-ONBUILD COPY package.json package-lock.* yarn.* /usr/src/app/
+ONBUILD COPY package.json yarn.* /usr/src/app/
 ONBUILD RUN if [ -e yarn.lock ]; \
   then yarn && yarn cache clean; \
   else npm i && npm cache clean --force; fi && \
