--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ services:
 env:
   matrix:
     - env:
+      VERSION: '9.2.0'
+    - env:
       VERSION: '8.9.1'
     - env:
       VERSION: '6.12.0'
